--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 		</head>
 	<body>
 			<hi>Sobre a Barbearia alura</hi>
-
+		</header>
+		<img id="banner" src="banner.jpg">
+		<div class="principal">
+			<h2 class="titulo-centralizado"> sobre a barbearia alura </h2>
+			
+			<p> localizado no coração da cidade a <strong> BARBEARIA ALURA</strong>
+			traz parav o mercado o que há de melhor para o seu cabelo e barba.Fundada em 2019, a
+				barbearia alura já é destaque na cidade e conquista novos clientes a cada dia.
+			</p>
+			
+			<p id="missao"><em> nossa missão é: <strong> "proporcionar auto-estima e qualidade
+				de vida aos clientes" </strong>.</em></p>
+			
+			<p> Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda.
+				o atendimento possui padrão de exelência e agilidade,garantindo qualidade
+				e sastisfação dos nossos clientes.</p>
+		</div>
 	</body>
 	</html>
