--- a/index.html
+++ b/index.html
@@ -24,4 +24,17 @@
 				e sastisfação dos nossos clientes.</p>
 		</div>
 	</body>
-	</html>
+	
+	<div class="beneficios">
+		<h3 class"titulo-centralizado"> beneficios </h3>
+		<ul>
+			<li class"beneficios">atendimento aos clientes </li>
+			<li class"itens">espaço diferenciado </li>
+			<li class"itens">localização </li>
+		</ul>
+		
+		<img src="beneficios.jpq" class="imagembeneficios">
+	
+	</div>
+</body>
+</html>
