--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			</p>
 			
 			<p id="missao"><em> nossa missão é: <strong> "proporcionar auto-estima e qualidade
+			<hi>Sobre a Barbearia alura</hi>
 				de vida aos clientes" </strong>.</em></p>
 			
 			<p> Oferecemos profissionais experientes e antenados ás mudanças no mundo da moda.
@@ -36,5 +37,13 @@
 		<img src="beneficios.jpq" class="imagembeneficios">
 	
 	</div>
+	<div class="videos">
+		<iframe width="100% hright="315" src="youtube.com/embed/wcVVXUV0YUY" framebor="0"
+			allow="accelerometer; autoplay; encrypted-media; gyriscipe; picture-ai-picture"
+			  allowfullscreen><
+	</div>	
+	</section>
+	 </main>
+
 </body>
-</html>
+<html>
