--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="videos">
 		<iframe width="100% hright="315" src="youtube.com/embed/wcVVXUV0YUY" framebor="0"
 			allow="accelerometer; autoplay; encrypted-media; gyriscipe; picture-ai-picture"
-			  allowfullscreen><
+			allowfullscreen></inframe>
 	</div>	
 	</section>
 	 </main>
